# libAIML

./: CMakeLists.txt  README.md
src/: aiml.h  aiml_parser.cpp  aiml_parser.h  aisl_parser.cpp  config_parser.cpp  core.cpp  core.h  errors.cpp  errors.h  graphmaster.cpp  javascript.cpp  javascript.h  serializer.cpp  stuff.cpp  template_parser.cpp  user.cpp
test_app/: main.cpp
util/: main.cpp
